Update to latest BTMS open API schema (#46)
* Update with CDMS open API spec generated from https://github.com/DEFRA/cdms-backend/tree/OAS-POC

* Regenerate models from latest CDMS

* Tweak description

* Rename tests as they are just gets

* Update integration tests
