# src/Api/Endpoints/UpdatedImportNotification.cs
@@ -5,9 +5,9 @@ namespace Defra.PhaImportNotifications.Api.Endpoints;
 
 internal sealed class UpdatedImportNotification
 {
-    [Description("Last updated date. Format is ISO 8601-1:2019")]
+    [Description("Date last updated. Format is ISO 8601-1:2019")]
     [Required]
-    public required DateTime LastUpdated { get; init; }
+    public required DateTime Updated { get; init; }
 
     /// <example>/import-notifications/CHEDA.GB.2024.1020304</example>
     [Description("Relative path to import notification")]
